# Copyright Matus Chochlik.
# Distributed under the Boost Software License, Version 1.0.
# See accompanying file LICENSE_1_0.txt or copy at
#  http://www.boost.org/LICENSE_1_0.txt

add_subdirectory(bake_noise_image)
add_subdirectory(bake_tiling_image)
add_subdirectory(bake_checker_image)
add_subdirectory(bake_png_image)
add_subdirectory(bake_shader_source)
add_subdirectory(bake_program_source)
add_subdirectory(texgen)
